# oreowallet-mono

./: .dockerignore  .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  config.txt  docker-compose.yml
.github/workflows/: deploy-docker.yaml  rust_ci.yml
crates/chain_loader/: Cargo.toml
crates/chain_loader/src/: lib.rs  main.rs
crates/constants/src/: lib.rs
crates/db_handler/: Cargo.toml
crates/db_handler/src/: config.rs  lib.rs  pg_handler.rs  redis_handler.rs
crates/dservice/: Cargo.toml
crates/dservice/src/: lib.rs  main.rs  manager.rs
crates/dworker/: Cargo.toml
crates/dworker/src/: lib.rs  main.rs
crates/networking/: Cargo.toml
crates/networking/src/: decryption_message.rs  lib.rs  orescriptions.rs  rpc_abi.rs  server_handler.rs  stream.rs  web_abi.rs
crates/networking/src/rpc_handler/: handler.rs  mod.rs
crates/networking/src/socket_message/: codec.rs
crates/oreo_errors/: Cargo.toml
crates/oreo_errors/src/: lib.rs
crates/params/: Cargo.toml
crates/params/src/: lib.rs  mainnet.rs  network.rs  testnet.rs
crates/prover/: Cargo.toml
crates/prover/src/: handlers.rs  lib.rs  main.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  main.rs  manager.rs
crates/server/: Cargo.toml
crates/server/src/: handlers.rs  lib.rs  main.rs
crates/transfer-tool/: Cargo.toml
crates/transfer-tool/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: cli.rs  lib.rs  signer.rs
fixtures/: postgres-config.yml  redis-config.yml
migrations/: 20240331163152_init.down.sql  20240331163152_init.up.sql  20240417022519_cachetable.down.sql  20240417022519_cachetable.up.sql  20240507125825_needscan.down.sql  20240507125825_needscan.up.sql  20240507164837_dropprimary.up.sql  20240611004802_localblocks.down.sql  20240611004802_localblocks.up.sql  20240611021314_localtxs.down.sql  20240611021314_localtxs.up.sql  20240805163224_firstseen.down.sql  20240805163224_firstseen.up.sql
src/: config.rs  constants.rs  db_handler.rs  error.rs  lib.rs  rpc_handler.rs
src/config/: mod.rs
src/db_handler/: mod.rs  pg_handler.rs  redis_handler.rs
src/dworkers/: mod.rs
src/manager/: codec.rs  mod.rs
src/orescriptions/: mod.rs
src/rpc_handler/: abi.rs  handler.rs  mod.rs
src/web_handlers/: abi.rs  account.rs  mod.rs  proof.rs
