[package]
name = "ironfish-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["macros"] }
clap = { version = "4.4.13", features = ["derive"] }
r2d2_redis = "0.14.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
substring = "1.4.5"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ureq = { version = "2.9.1", features = ["json"] }
