[package]
name = "db_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = { version = "0.3.30", features = ["futures-executor"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0.111"
async-trait = "0.1.79"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres"] }
substring = "1.4.5"
tracing = "0.1.40"
oreo_errors = { path = "../oreo_errors" }
constants = { path = "../constants" }
redis = { version = "0.25.2", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }

[dev-dependencies]
sqlx-db-tester = "0.4.0"
tokio = { version = "1.35.1", features = ["full"] }
