[package]
name = "dworker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironfish_rust = { package = "ironfish", git = "https://github.com/oreoslabs/ironfish-optimize.git", branch = "feature/support-wasm" }
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
rayon = "1.5"
tokio-util = { version = "0.7.3", features = ["codec"] }
bytes = "1"
futures = { version = "0.3.30" }
tracing = "0.1.40"
constants = { path = "../constants" }
oreo_errors = { path = "../oreo_errors" }
db_handler = { path = "../db_handler" }
networking = { path = "../networking" }
utils = { path = "../utils" }
hex = "0.4.3"
num_cpus = "1.16.0"
gethostname = "0.4.3"
rand = "0.8.5"
