[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.111"
constants = { path = "../constants" }
oreo_errors = { path = "../oreo_errors" }
db_handler = { path = "../db_handler" }
anyhow = "1.0.82"
ureq = { version = "2.9.1", features = ["json"] }
axum = "0.7.3"
tracing = "0.1.40"
tokio-util = { version = "0.7.3", features = ["codec"] }
bytes = "1"
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
