[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["macros"] }
clap = { version = "4.4.13", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
utils = { path = "../utils" }
networking = { path = "../networking" }
constants = { path = "../constants" }
oreo_errors = { path = "../oreo_errors" }
db_handler = { path = "../db_handler" }
serde_json = "1.0.117"
